// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`confirmationEmail > renders a health-insurance confirmation without a seña row 1`] = `
{
  "html": "<!doctype html>
<html lang="es">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<title>Dra. Mara Flamini · Dermatología</title>
</head>
<body style="margin:0;padding:0;background:#fff3f0;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;color:#111827;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fff3f0;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="width:600px;max-width:100%;background:#ffffff;border-radius:12px;overflow:hidden;box-shadow:0 1px 3px rgba(0,0,0,0.1);">
        <tr><td style="background:#ba8c84;padding:20px 28px;">
          <span style="font-size:16px;font-weight:700;color:#ffffff;">Dra. Mara Flamini · Dermatología</span>
        </td></tr>
        <tr><td style="padding:28px;"><h1 style="margin:0 0 16px;font-size:20px;line-height:1.3;font-weight:700;color:#111827;">Hola Lucía, tu cita quedó confirmada</h1>
<p style="margin:0 0 16px;font-size:15px;line-height:1.6;color:#4b5563;">Estos son los detalles de tu cita:</p>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #e5e7eb;border-bottom:1px solid #e5e7eb;margin:0 0 20px;"><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Paciente</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">Lucía Gómez</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Teléfono</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">3421112233</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Email</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">lucia@example.com</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Tipo de visita</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">Consulta</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Tipo de consulta</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">Primera vez</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Cobertura</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">OSDE</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Fecha</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">2026-06-22</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Hora</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">09:30</td>
    </tr></table>
<table role="presentation" cellpadding="0" cellspacing="0" style="margin:4px 0 16px;">
    <tr><td style="border-radius:8px;background:#9e7162;">
      <a href="https://clinica.example/cita/apt-1" style="display:inline-block;padding:12px 24px;font-size:15px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Ver o cancelar tu cita</a>
    </td></tr>
  </table>
<p style="margin:0 0 16px;font-size:15px;line-height:1.6;color:#4b5563;">Podés cancelar tu cita hasta 24 horas antes del horario del turno desde ese enlace.</p></td></tr>
        <tr><td style="padding:18px 28px;background:#f7e8e4;border-top:1px solid #e5e7eb;">
          <span style="font-size:12px;color:#4b5563;">Dra. Mara Flamini · Dermatología</span>
        </td></tr>
      </table>
    </td></tr>
  </table>
</body>
</html>",
  "subject": "Tu cita quedó confirmada — Dra. Mara Flamini",
  "text": "Hola Lucía, tu cita quedó confirmada.

Detalles de tu cita:
- Paciente: Lucía Gómez
- Teléfono: 3421112233
- Email: lucia@example.com
- Tipo de visita: Consulta
- Tipo de consulta: Primera vez
- Cobertura: OSDE
- Fecha: 2026-06-22
- Hora: 09:30

Ver o cancelar tu cita: https://clinica.example/cita/apt-1
Podés cancelar tu cita hasta 24 horas antes del horario del turno desde ese enlace.

Dra. Mara Flamini · Dermatología",
  "to": "lucia@example.com",
}
`;

exports[`confirmationEmail > renders a self-pay practice confirmation with the seña amount 1`] = `
{
  "html": "<!doctype html>
<html lang="es">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<title>Dra. Mara Flamini · Dermatología</title>
</head>
<body style="margin:0;padding:0;background:#fff3f0;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;color:#111827;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#fff3f0;">
    <tr><td align="center" style="padding:24px 12px;">
      <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="width:600px;max-width:100%;background:#ffffff;border-radius:12px;overflow:hidden;box-shadow:0 1px 3px rgba(0,0,0,0.1);">
        <tr><td style="background:#ba8c84;padding:20px 28px;">
          <span style="font-size:16px;font-weight:700;color:#ffffff;">Dra. Mara Flamini · Dermatología</span>
        </td></tr>
        <tr><td style="padding:28px;"><h1 style="margin:0 0 16px;font-size:20px;line-height:1.3;font-weight:700;color:#111827;">Hola Lucía, tu cita quedó confirmada</h1>
<p style="margin:0 0 16px;font-size:15px;line-height:1.6;color:#4b5563;">Estos son los detalles de tu cita:</p>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #e5e7eb;border-bottom:1px solid #e5e7eb;margin:0 0 20px;"><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Paciente</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">Lucía Gómez</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Teléfono</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">3421112233</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Email</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">lucia@example.com</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Tipo de visita</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">Práctica</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Tipo de práctica</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">Biopsia</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Cobertura</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">Practica Particular</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Seña</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">$35.000</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Fecha</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">2026-06-22</td>
    </tr><tr>
      <td style="padding:8px 12px 8px 0;font-size:13px;color:#4b5563;width:42%;vertical-align:top;">Hora</td>
      <td style="padding:8px 0;font-size:14px;color:#111827;font-weight:600;vertical-align:top;">09:30</td>
    </tr></table>
<table role="presentation" cellpadding="0" cellspacing="0" style="margin:4px 0 16px;">
    <tr><td style="border-radius:8px;background:#9e7162;">
      <a href="https://clinica.example/cita/apt-2" style="display:inline-block;padding:12px 24px;font-size:15px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Ver o cancelar tu cita</a>
    </td></tr>
  </table>
<p style="margin:0 0 16px;font-size:15px;line-height:1.6;color:#4b5563;">Podés cancelar tu cita hasta 24 horas antes del horario del turno desde ese enlace.</p></td></tr>
        <tr><td style="padding:18px 28px;background:#f7e8e4;border-top:1px solid #e5e7eb;">
          <span style="font-size:12px;color:#4b5563;">Dra. Mara Flamini · Dermatología</span>
        </td></tr>
      </table>
    </td></tr>
  </table>
</body>
</html>",
  "subject": "Tu cita quedó confirmada — Dra. Mara Flamini",
  "text": "Hola Lucía, tu cita quedó confirmada.

Detalles de tu cita:
- Paciente: Lucía Gómez
- Teléfono: 3421112233
- Email: lucia@example.com
- Tipo de visita: Práctica
- Tipo de práctica: Biopsia
- Cobertura: Practica Particular
- Seña: $35.000
- Fecha: 2026-06-22
- Hora: 09:30

Ver o cancelar tu cita: https://clinica.example/cita/apt-2
Podés cancelar tu cita hasta 24 horas antes del horario del turno desde ese enlace.

Dra. Mara Flamini · Dermatología",
  "to": "lucia@example.com",
}
`;
